css/layout.css
[ng-click] {
    cursor: pointer;
}

*:focus {
    outline: none;
}

#sidenav, #right-margin {
    transition: width .8s ease;
}

#right-margin {
    width: 0;
}

#right-margin.inflate,
#sidenav {
    width: 200px;
}

#toolbar, #sidenav {
    height: 64px;
    max-height: none;
}

#sidenav.open {
    height: inherit;
}

#sidenav.tight {
    width: 64px;
}

#sidenav md-toolbar {
    font-size: 28px;
}

#sidenav md-toolbar md-icon {
    height: 36px;
    min-width: 32px;
    margin: 14px 16px;
}

#sidenav md-toolbar md-icon .dome {
    fill: #2e7d32;
}

#sidenav md-toolbar span {
    font-weight: 300;
    margin-left: 8px
}

#sidenav md-toolbar,
#sidenav md-content {
    overflow-x: hidden;
}

#sidenav.ng-animate md-content,
md-card {
    overflow: hidden;
}

#sidenav md-list-item .md-button {
    padding: 0 14px;
}

#sidenav md-list-item .md-avatar-icon {
    margin-right: 14px;
    font-size: 18px;
    padding: 6px;
}

md-toolbar {
    min-height: 64px;
}

#toolbar {
    padding-right: 0;
}

#toolbar md-select {
    height: 30px;
    margin-bottom: 6px;
}

.md-toolbar-tools > md-icon:first-child {
    margin-right: 8px;
}

ng-view, ng-view md-card {
    margin: 10px;
}

md-card {
    background-color: #fafafa;
}

md-dialog .md-toolbar-tools {
    max-height: 100%;
    padding: 0 24px;
}

md-dialog p {
    font-size: 20px;
    padding: 4px 0;
}

.course-info-icons md-icon {
    vertical-align: baseline;
    font-size: 20px;
    color: #424242;
    margin-right: 8px;
}

.fix-icon {
    width: 36px;
    height: 36px;
    line-height: 36px;
    text-align: center;
    font-size: 20px;
    margin-top: 8px !important;
}

.no-margin {
    margin: 0;
}

.fa-1x {
    font-size: 1.6em;
}

md-list-item.md-2-line .md-list-item-text p {
    text-overflow: ellipsis;
    overflow: hidden;
    white-space: nowrap;
}

